tests/snapshots/gateway/studio/analysis_markdown_payload.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "diagnostics": [],
  "documentHash": "82096e6c66111f65b2e74ec66af2afb6b53cf02bf70616f101a2090c59fe9abd",
  "edgeCount": 7,
  "edges": [
    {
      "evidence": {
        "confidence": 1.0,
        "lineEnd": 1,
        "lineStart": 1,
        "path": "main/docs/analysis.md"
      },
      "id": "edge:1",
      "kind": "contains",
      "label": "contains",
      "sourceId": "doc:0",
      "targetId": "sec:1"
    },
    {
      "evidence": {
        "confidence": 1.0,
        "lineEnd": 3,
        "lineStart": 3,
        "path": "main/docs/analysis.md"
      },
      "id": "edge:2",
      "kind": "contains",
      "label": "contains",
      "sourceId": "sec:1",
      "targetId": "sec:3"
    },
    {
      "evidence": {
        "confidence": 1.0,
        "lineEnd": 4,
        "lineStart": 4,
        "path": "main/docs/analysis.md"
      },
      "id": "edge:3",
      "kind": "contains",
      "label": "contains",
      "sourceId": "sec:3",
      "targetId": "task:4"
    },
    {
      "evidence": {
        "confidence": 1.0,
        "lineEnd": 5,
        "lineStart": 5,
        "path": "main/docs/analysis.md"
      },
      "id": "edge:4",
      "kind": "contains",
      "label": "contains",
      "sourceId": "sec:3",
      "targetId": "task:5"
    },
    {
      "evidence": {
        "confidence": 0.9,
        "lineEnd": 5,
        "lineStart": 5,
        "path": "main/docs/analysis.md"
      },
      "id": "edge:5",
      "kind": "nextstep",
      "label": "next",
      "sourceId": "task:4",
      "targetId": "task:5"
    },
    {
      "evidence": {
        "confidence": 1.0,
        "lineEnd": 7,
        "lineStart": 7,
        "path": "main/docs/analysis.md"
      },
      "id": "edge:6",
      "kind": "contains",
      "label": "contains",
      "sourceId": "sec:1",
      "targetId": "sec:7"
    },
    {
      "evidence": {
        "confidence": 1.0,
        "lineEnd": 17,
        "lineStart": 15,
        "path": "main/docs/analysis.md"
      },
      "id": "edge:7",
      "kind": "contains",
      "label": "contains",
      "sourceId": "sec:7",
      "targetId": "code:15"
    }
  ],
  "nodeCount": 7,
  "nodes": [
    {
      "depth": 0,
      "id": "doc:0",
      "kind": "document",
      "label": "main/docs/analysis.md",
      "lineEnd": 17,
      "lineStart": 1,
      "parentId": null
    },
    {
      "depth": 1,
      "id": "sec:1",
      "kind": "section",
      "label": "Analysis Kernel",
      "lineEnd": 2,
      "lineStart": 1,
      "parentId": "doc:0"
    },
    {
      "depth": 2,
      "id": "sec:3",
      "kind": "section",
      "label": "Inputs",
      "lineEnd": 6,
      "lineStart": 3,
      "parentId": "sec:1"
    },
    {
      "depth": 3,
      "id": "task:4",
      "kind": "task",
      "label": "Parse markdown",
      "lineEnd": 4,
      "lineStart": 4,
      "parentId": "sec:3"
    },
    {
      "depth": 3,
      "id": "task:5",
      "kind": "task",
      "label": "Build IR",
      "lineEnd": 5,
      "lineStart": 5,
      "parentId": "sec:3"
    },
    {
      "depth": 2,
      "id": "sec:7",
      "kind": "section",
      "label": "Links",
      "lineEnd": 17,
      "lineStart": 7,
      "parentId": "sec:1"
    },
    {
      "depth": 3,
      "id": "code:15",
      "kind": "codeblock",
      "label": "code block (rust)",
      "lineEnd": 17,
      "lineStart": 15,
      "parentId": "sec:7"
    }
  ],
  "path": "main/docs/analysis.md",
  "projections": [
    {
      "edgeCount": 6,
      "kind": "outline",
      "nodeCount": 3,
      "source": "graph TD\n  sec_1[\"Analysis Kernel\"]\n  sec_3[\"Inputs\"]\n  sec_7[\"Links\"]\n  doc_0 --> sec_1\n  sec_1 --> sec_3\n  sec_3 --> task_4\n  sec_3 --> task_5\n  sec_1 --> sec_7\n  sec_7 --> code_15\n"
    },
    {
      "edgeCount": 1,
      "kind": "tasks",
      "nodeCount": 2,
      "source": "graph LR\n  task_4[\"Parse markdown\"]\n  task_5[\"Build IR\"]\n  task_4 --> task_5\n"
    }
  ]
}
