tests/snapshots/gateway/studio/analysis_markdown_unqualified_path_error.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "error": "VFS path not found: docs/analysis.md"
}
